<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/wizard_room_expenses"
                android:background="@drawable/ab_background_textured_roomies"
                android:colorAccent="@color/white"
                tools:context="com.phaseii.rxm.roomies.activity.GetStartedWizard.RoomExpense">


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_centerInParent="true"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:id="@+id/linearLayout">


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/enter_room_expenses"
			android:layout_gravity="center"
			android:textSize="20sp"
			android:layout_marginBottom="20dp"
			android:textColor="@color/white"
			android:textStyle="bold"/>


		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

			<ToggleButton
				android:layout_width="75dip"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"
				android:textOn="@string/fixed"
				android:textOff="@string/variable"
				style="@style/ToggleRoomies"
				android:id="@+id/room_rent_toggle"
				android:textColor="@color/white"
				android:checked="true"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/rent"
				android:id="@+id/room_rent"
				android:textColorHint="@color/white"
				android:textColor="@color/white"
				style="@style/EditTextRoomies"
				android:enabled="true"
				android:maxLength="5"
				android:inputType="number"
				android:layout_toRightOf="@+id/room_rent_toggle"
				android:layout_toEndOf="@+id/room_rent_toggle"
				android:layout_centerInParent="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/ErrorButton"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:id="@+id/room_rent_error"/>

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

			<ToggleButton
				android:layout_width="75dip"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"
				android:textOn="@string/fixed"
				android:textOff="@string/variable"
				style="@style/ToggleRoomies"
				android:id="@+id/room_maid_toggle"
				android:textColor="@color/white"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/maid"
				android:id="@+id/room_maid"
				android:textColorHint="@color/white"
				android:textColor="@color/white"
				style="@style/EditTextRoomies"
				android:maxLength="5"
				android:inputType="number"
				android:enabled="false"
				android:layout_toRightOf="@+id/room_maid_toggle"
				android:layout_toEndOf="@+id/room_maid_toggle"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/ErrorButton"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:id="@+id/room_maid_error"/>
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

			<ToggleButton
				android:layout_width="75dip"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"
				android:textOn="@string/fixed"
				android:textOff="@string/variable"
				style="@style/ToggleRoomies"
				android:id="@+id/room_electricity_toggle"
				android:textColor="@color/white"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/electricity"
				android:id="@+id/room_electricity"
				android:textColorHint="@color/white"
				android:textColor="@color/white"
				style="@style/EditTextRoomies"
				android:enabled="false"
				android:maxLength="5"
				android:inputType="number"
				android:layout_toRightOf="@+id/room_electricity_toggle"
				android:layout_toEndOf="@+id/room_electricity_toggle"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/ErrorButton"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:id="@+id/room_electricity_error"/>
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

			<ToggleButton
				android:layout_width="75dip"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"
				android:textOn="@string/fixed"
				android:textOff="@string/variable"
				android:checked="true"
				style="@style/ToggleRoomies"
				android:id="@+id/room_misc_toggle"
				android:textColor="@color/white"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/miscellaneous"
				android:id="@+id/room_misc"
				android:textColorHint="@color/white"
				android:textColor="@color/white"
				style="@style/EditTextRoomies"
				android:enabled="true"
				android:maxLength="5"
				android:inputType="number"
				android:layout_toRightOf="@+id/room_misc_toggle"
				android:layout_toEndOf="@+id/room_misc_toggle"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/ErrorButton"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:id="@+id/room_misc_error"/>

		</RelativeLayout>

		<Button
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:text="@string/finish"
			android:layout_gravity="center"
			style="@style/ButtonRoomies"
			android:onClick="roomExpenseCompleted"
			android:textStyle="bold"
			android:textColor="@color/white"/>
	</LinearLayout>


</RelativeLayout>